# c1-spider-senior-design

./: .gitmodules  README.md
mtrespider/: CMakeLists.txt  package.xml
mtrespider/launch/: startup.launch  startup_odroid.launch  startup_root.launch
mtrespider/msg/: ina219.msg
mtrespider/src/: ampsensor.cpp  current_sensor.cpp  ferrosensor.cpp  motor_cal.cpp  tension_adjust.cpp  transducerarm.cpp  transducerarm.cpp.fudge.pid  transducerarm.cpp.fudge.timing  transducerarm.cpp.ori  web_server.cpp
mtrespider/web_server/: icon.css  index.html  lighttpd.conf  style.css
